--- a/templates/pages/basket_full.html
+++ b/templates/pages/basket_full.html
@@ -137,7 +137,7 @@
 
 <div class="container total_cost">
 
-    <div class="total_cost__item">
+    <div class="total_cost__item margin_top-15">
         <div class="total_item_name main_text">
             Сумма
         </div>
