--- a/templates/pages/personal_account_info.html
+++ b/templates/pages/personal_account_info.html
@@ -19,10 +19,6 @@
     <div class="row_info">
 
         <div class="row_info_col">
-            <div class="discount_cell--hidden">
-                <p class="main_text uppercase">персональная скидка <span class="red">5%</span></p>
-                <a href="personal_account_info_discount.html" class="small_text underline">подробнее о системе лояльности</a>
-            </div>
             <div class="info_cell">
                 <p class="addit_text_addit_dark">Фамилия</p>
                 <form method="GET" action="#" >
@@ -80,7 +76,7 @@
                     </form>
                 </div>
             </div>
-            <a href="#" class="btn_main">
+            <a href="#" class="btn_main margin_top-15">
                 <p class="main_text uppercase btn_text">сохранить изменения</p>
             </a>
         </div>
