--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -1,5 +1,18 @@
 {% set page_name = 'Контакты' %}
 
+{% set breadcrumbs = 
+    [ 
+        {
+            link: 'index.html',
+            text: 'Главная'
+        },
+        {
+            link: 'contacts.html',
+            text: 'Контакты'
+        }
+    ]
+%}
+
 {% extends "layouts/main.layout.html" %} 
 
 {% block content %}
