--- a/templates/pages/favourites.html
+++ b/templates/pages/favourites.html
@@ -1,5 +1,18 @@
 {% set page_name = 'Избранное' %}
 
+{% set breadcrumbs = 
+    [ 
+        {
+            link: 'index.html',
+            text: 'Главная'
+        },
+        {
+            link: 'favourites.html',
+            text: 'Избранное'
+        }
+    ]
+%}
+
 {% extends "layouts/main.layout.html" %} 
 
 {% block content %}
