--- a/templates/pages/refund.html
+++ b/templates/pages/refund.html
@@ -1,5 +1,18 @@
 {% set page_name = 'Возврат' %}
 
+{% set breadcrumbs = 
+    [ 
+        {
+            link: 'index.html',
+            text: 'Главная'
+        },
+        {
+            link: 'refund.html',
+            text: 'Возврат'
+        }
+    ]
+%}
+
 {% extends "layouts/main.layout.html" %} 
 
 {% block content %}
