--- a/templates/pages/total_looks.html
+++ b/templates/pages/total_looks.html
@@ -1,5 +1,18 @@
 {% set page_name = 'Готовые образы' %}
 
+{% set breadcrumbs = 
+    [ 
+        {
+            link: 'index.html',
+            text: 'Главная'
+        },
+        {
+            link: 'total_looks.html',
+            text: 'Готовые образы'
+        }
+    ]
+%}
+
 {% extends "layouts/main.layout.html" %} 
 
 {% block content %}
