--- a/templates/pages/catalog_sales.html
+++ b/templates/pages/catalog_sales.html
@@ -1,5 +1,18 @@
 {% set page_name = 'Распродажа' %}
 
+{% set breadcrumbs = 
+    [ 
+        {
+            link: 'index.html',
+            text: 'Главная'
+        },
+        {
+            link: 'catalog_sales.html',
+            text: 'Распродажа'
+        }
+    ]
+%}
+
 {% extends "layouts/main.layout.html" %} 
 
 {% block content %}
