--- a/templates/pages/delivery.html
+++ b/templates/pages/delivery.html
@@ -1,5 +1,18 @@
 {% set page_name = 'Доставка' %}
 
+{% set breadcrumbs = 
+    [ 
+        {
+            link: 'index.html',
+            text: 'Главная'
+        },
+        {
+            link: 'delivery.html',
+            text: 'Доставка'
+        }
+    ]
+%}
+
 {% extends "layouts/main.layout.html" %} 
 
 {% block content %}
