--- a/templates/pages/personal_account_info_discount.html
+++ b/templates/pages/personal_account_info_discount.html
@@ -1,5 +1,18 @@
 {% set page_name = 'Личный кабинет' %}
 
+{% set breadcrumbs = 
+    [ 
+        {
+            link: 'index.html',
+            text: 'Главная'
+        },
+        {
+            link: 'personal_account_info.html',
+            text: 'Личный кабинет'
+        }
+    ]
+%}
+
 {% extends "layouts/main.layout.html" %} 
 
 {% block content %}
