--- a/templates/pages/making_order_delivery_pickup.html
+++ b/templates/pages/making_order_delivery_pickup.html
@@ -42,9 +42,9 @@
         <p class="main_text type_choice">Выберите подходящий вариант доставки:</p>
 
         <form method="GET" action="#" class="delivery_checkbox">
-            <input type="radio" id="courier" name="type_delivery" class="сustom_сheckbox"  checked>
+            <input type="radio" id="courier" name="type_delivery" class="сustom_сheckbox">
             <label for="courier"><a href="making_order_delivery_courier.html"  class="main_text_addit_dark">Доставка курьером</a></label> 
-            <input type="radio" id="pickup" name="type_delivery" class="сustom_сheckbox">
+            <input type="radio" id="pickup" name="type_delivery" class="сustom_сheckbox" checked>
             <label for="pickup"><a href="making_order_delivery_pickup.html"  class="main_text_addit_dark">Самовывоз</a></label> 
         </form>
 
